--- a/templates/categorie.html
+++ b/templates/categorie.html
@@ -2,7 +2,7 @@
 block seo_title %}{{ seo_title }}{% endblock %} {% block seo_description %}{{
 seo_description }}{% endblock %} {% block canonical %}{{ canonical }}{% endblock
 %} {% block og_url %}{{ canonical }}{% endblock %} {% block content %}
-<div class="category">
+<div class="category_page">
   <h1>{{ nom_categorie }} à La Réunion</h1>
 
   <p class="intro">
