--- a/templates/base.html
+++ b/templates/base.html
@@ -128,6 +128,7 @@
             Derniers sites ajoutés
           </a>
         </li>
+        <li><a href="{{ url_for('faq') }}">FAQ</a></li>
       </ul>
     </nav>
 
@@ -142,6 +143,7 @@
       >
       <p><strong>Réunion Wiki</strong> - Simplifions l'information locale.</p>
       <nav>
+        <a href="{{ url_for('faq') }}">FAQ</a> |
         <a href="/mentions-legales" target="_blank">Mentions légales</a> |
         <a href="https://forms.gle/GScJkMiEZXVSted78" target="_blank"
           >Contact</a
