contact nav SEO

--- a/templates/base.html
+++ b/templates/base.html
@@ -129,6 +129,11 @@
           </a>
         </li>
         <li><a href="{{ url_for('faq') }}">FAQ</a></li>
+        <li>
+          <a href="https://forms.gle/GScJkMiEZXVSted78" target="_blank"
+            >Contact</a
+          >
+        </li>
       </ul>
     </nav>
 
