fix nouveaux sites css

--- a/templates/nouveaux_sites.html
+++ b/templates/nouveaux_sites.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}Derniers sites ajoutés - Réunion
 Wiki{% endblock %} {% block content %}
-<div class="category">
+<div class="category_page">
   <h2>📌 Derniers sites ajoutés</h2>
   <ul>
     {% for site in sites %}
